test/files/pos/t3792.scala
object Test {
  type Hui = Nil.type
  val n: Hui = Nil
}