test/files/neg/macro-invalidret-typemacros/Macros_Test_2.scala
object Macros {
  type Foo1 = macro Impls.foo1
  type Foo2 = macro Impls.foo2
}
